@@ -43,6 +43,7 @@ class RunController : public QObject
   void runResumed();
 
  public slots:
+  void playSound(QString soundfile);
   void inputFilter(QString text);
   void outputFilter(QString text);
   void outputClear();
